# sauna-monitor-qt

./: .gitignore  CMakeLists.txt  Readme.md  app-example  app-example.pro  main.cpp  main.qml  qml.qrc  sauna-monitor-qt.pro
UI/: AboutPage.qml  ControlSlider.qml  Greeter.qml  HomeScreen.qml  SaunaSchedule.qml  SettingsDialog.qml  TemperatureSetting.qml  TurningOff.qml
controls/: controls.cpp  controls.h
